--- a/src/PCFMELLO.CursoMvc.UI.Mvc/Web.config
+++ b/src/PCFMELLO.CursoMvc.UI.Mvc/Web.config
@@ -8,8 +8,12 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\pcfmelloCursoMvcDB.mdf;Initial Catalog=CursoMVCEnterprise;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" 
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
+                           AttachDbFilename=|DataDirectory|\pcfmelloCursoMvcDB.mdf;
+                           Initial Catalog=CursoMVCEnterprise;
+                           Integrated Security=True"
+        providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
